# duck-chess

./: riji.rhai
engine/: Cargo.toml  build.rs
engine/benches/: bench_evaluation.rs
engine/src/: engine.rs  lib.rs  logic.rs  lookup.rs  macros.rs  pgn.rs  types.rs  util.rs
server/: Cargo.toml  build.rs
server/src/: api.rs  cors.rs  error.rs  main.rs  requests.rs
ui/: index.html  package-lock.json  package.json  rollup.config.js  vite.config.js
ui/public/: global.css  index.html
ui/src/: app.css  app.svelte  board.svelte  boardview.js
ui/src/api/: api.js  data.js
ui/src/lib/: sprite.js
