[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
byte-parser = "0.2"
# tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# rand = "0.8"
# rayon = "1.5"
# nnfs-lib = { version = "0.1", path = "./../../nnfs-lib" }
# rand_distr = "0.4"