[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench_evaluation"
harness = false

[profile.bench]
lto = true
debug = true

[dependencies]
byte-parser = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.4"
arrayvec = "0.7"

[dev-dependencies]
criterion = "0.3"