[package]
name = "duck-chess"
description = "A library to for duck chess"
version = "0.1.1"
authors = ["Sören Meier <info@soerenmeier.ch>"]
repository = "https://github.com/soerenmeier/duck-chess"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.74"

[features]
flamegraph = []

[[bench]]
name = "bench_evaluation"
harness = false

[profile.bench]
lto = true
debug = true

[dependencies]
byte-parser = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.4"
arrayvec = "0.7"

[dev-dependencies]
criterion = "0.3"
