[package]
name = "server"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fire = { package = "fire-http", version = "0.2", features = ["fs", "json", "ws"] }
fire-api = { package = "fire-http-api", version = "0.1", features = ["stream"] }
backend = { version = "0.1", path = "./../backend" }
clap = { version = "3.1", features = ["derive"] }